--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "homepage": "https://github.com/goldenshun/react-167-playground#readme",
   "dependencies": {
+    "hoist-non-react-statics": "3.1.0",
     "next": "7.0.2",
     "react": "16.5.2",
     "react-dom": "16.5.2"
