--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hoist-non-react-statics": "3.1.0",
     "next": "7.0.2",
     "react": "16.5.2",
+    "react-cache": "2.0.0-alpha.1",
     "react-dom": "16.5.2"
   },
   "devDependencies": {
